# OSM-BKI

./: .gitattributes  README.md  run_cmd.sh
configs/: kitti360_config.yaml  kitti_config.yaml  mcd_config.yaml
cpp/osm_bki/: CMakeLists.txt  README.md
cpp/osm_bki/examples/: test_cbki.cpp  visualize_map_osm.cpp
cpp/osm_bki/include/: continuous_bki.hpp  yaml_parser.hpp
cpp/osm_bki/src/: continuous_bki.cpp  dataset_utils.cpp  osm_loader.cpp
cpp/osm_sbki/: CMakeLists.txt  README.md
cpp/osm_sbki/examples/: visualize_map_osm.cpp
example_data/kitti360/2013_05_28_drive_0009_sync/: velodyne_poses.txt
example_data/kitti360/2013_05_28_drive_0009_sync/velodyne_points/: timestamps.txt
osm_bki_ros/: package.xml  setup.cfg  setup.py
osm_bki_ros/config/: params.yaml
osm_bki_ros/launch/: simple_node.launch.py
osm_bki_ros/osm_bki_ros/: simple_node.py
python/: README.md  requirements.txt  run_benchmarks.sh  run_osmbki.sh  setup.py
python/benchmarks/: calibration_benchmark.py  forgetting_benchmark.py  kernel_ablation_benchmark.py  multi_scan_benchmark.py  noise_benchmark.py  osm_modes_benchmark.py  osm_randomization_benchmark.py  parameter_sensitivity_benchmark.py  per_class_iou_benchmark.py  plot_results.ipynb  pred_vs_gt_benchmark.py  temporal_consistency_benchmark.py  throughput_benchmark.py
python/osm_bki/: __init__.py
python/osm_bki/pybind/: osm_bki_bindings.cpp
python/scripts/: bki_tools.py  confusion_matrix_eval.py  continuous_map_train_test.py  label_utils.py  script_utils.py  visualize_osm_xml.py
